--- a/config/polybar/config
+++ b/config/polybar/config
@@ -204,11 +204,15 @@ fuzzy-match = true
 ;            
 
 ws-icon-0 = 1;
-ws-icon-1 = 2;
+ws-icon-1 = 2;
 ws-icon-2 = 3;
 ws-icon-3 = 4;
 ws-icon-4 = 5;
-ws-icon-default = 
+ws-icon-5 = 6;
+ws-icon-6 = 7;
+ws-icon-7 = 8;
+ws-icon-8 = 9;
+ws-icon-default = 
 ; NOTE: You cannot skip icons, e.g. to get a ws-icon-6
 ; you must also define a ws-icon-5.
 ; NOTE: Icon will be available as the %icon% token inside label-*
@@ -373,7 +377,7 @@ format-disconnected = <label-disconnected>
 ;   %downspeed% [wireless+wired]
 ;   %linkspeed% [wired]
 
-label-connected = " %downspeed%  %upspeed%"
+label-connected = " %downspeed%"
 label-connected-background = ${colors.pink}
 label-connected-foreground = ${colors.background}
 label-connected-padding = 1
