--- a/ArchLinux/.config/kitty/kitty.conf
+++ b/ArchLinux/.config/kitty/kitty.conf
@@ -1,4 +1,14 @@
-include dracula.conf
+#     ██╗      █████╗ ██╗  ██╗███████╗██╗  ██╗███╗   ███╗██╗██╗  ██╗ █████╗ ███╗   ██╗████████╗ █████╗
+#     ██║     ██╔══██╗██║ ██╔╝██╔════╝██║  ██║████╗ ████║██║██║ ██╔╝██╔══██╗████╗  ██║╚══██╔══╝██╔══██╗
+#     ██║     ███████║█████╔╝ ███████╗███████║██╔████╔██║██║█████╔╝ ███████║██╔██╗ ██║   ██║   ███████║
+#     ██║     ██╔══██║██╔═██╗ ╚════██║██╔══██║██║╚██╔╝██║██║██╔═██╗ ██╔══██║██║╚██╗██║   ██║   ██╔══██║
+#     ███████╗██║  ██║██║  ██╗███████║██║  ██║██║ ╚═╝ ██║██║██║  ██╗██║  ██║██║ ╚████║   ██║   ██║  ██║
+#     ╚══════╝╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝╚═╝  ╚═╝╚═╝     ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝   ╚═╝   ╚═╝  ╚═╝
+
+#### Color Scheme   ########
+
+#include dracula.conf
+include royal-dark.conf
 
 # vim:fileencoding=utf-8:ft=conf
 
@@ -18,6 +28,8 @@ bold_italic_font auto
 # Font size (in pts)
 font_size        11.0
 
+#Background Opacity
+#background_opacity  0.9
 # The cursor shape can be one of (block, beam, underline)
 cursor_shape     underline
 
@@ -100,10 +112,10 @@ window_border_width 0
 window_margin_width 8
 
 # The color for the border of the active window
-active_border_color #ffffff
+active_border_color #eeeef4
 
 # The color for the border of inactive windows
-inactive_border_color #cccccc
+inactive_border_color #404040
 
 # Key mapping
 # For a list of key names, see: http://www.glfw.org/docs/latest/group__keys.html
@@ -182,7 +194,4 @@ macos_option_as_alt no
 # means to use the default system color, a value of "background" means to use
 # the default background color and finally you can use an arbitrary color, such
 # as #12af59 or "red".
-macos_titlebar_color background
-
-allow_remote_control yes
 
