--- a/ArchLinux/.config/picom/picom.conf
+++ b/ArchLinux/.config/picom/picom.conf
@@ -1,13 +1,12 @@
-#  ____ _____
-# |  _ \_   _|  Derek Taylor (DistroTube)
-# | | | || |    http://www.youtube.com/c/DistroTube
-# | |_| || |    http://www.gitlab.com/dwt1/
-# |____/ |_|
-#
-# My config. Not much to see here; just some pretty standard stuff.
+#     ██╗      █████╗ ██╗  ██╗███████╗██╗  ██╗███╗   ███╗██╗██╗  ██╗ █████╗ ███╗   ██╗████████╗ █████╗
+#     ██║     ██╔══██╗██║ ██╔╝██╔════╝██║  ██║████╗ ████║██║██║ ██╔╝██╔══██╗████╗  ██║╚══██╔══╝██╔══██╗
+#     ██║     ███████║█████╔╝ ███████╗███████║██╔████╔██║██║█████╔╝ ███████║██╔██╗ ██║   ██║   ███████║
+#     ██║     ██╔══██║██╔═██╗ ╚════██║██╔══██║██║╚██╔╝██║██║██╔═██╗ ██╔══██║██║╚██╗██║   ██║   ██╔══██║
+#     ███████╗██║  ██║██║  ██╗███████║██║  ██║██║ ╚═╝ ██║██║██║  ██╗██║  ██║██║ ╚████║   ██║   ██║  ██║
+#     ╚══════╝╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝╚═╝  ╚═╝╚═╝     ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝   ╚═╝   ╚═╝  ╚═╝
 
 # Enabled client-side shadows on windows. Note desktop windows
-# (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow, 
+# (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow,
 # unless explicitly requested using the wintypes option.
 #
 shadow = true;
@@ -33,13 +32,19 @@ shadow-offset-y = -3;
 shadow-exclude = [
   "name = 'Notification'",
   "class_g = 'Conky'",
-  "class_g ?= 'Notify-osd'",
-  "class_g = 'Cairo-clock'",
-  "class_g = 'slop'",
-  "class_g = 'Polybar'",
-  "_GTK_FRAME_EXTENTS@:c"
+#  "class_g = 'Polybar'",
+  "class_g = 'vlc'",
+  "class_g = 'firefox'",
+"_GTK_FRAME_EXTENTS@:c"
 ];
 
+blur: {
+  method = "kawase";
+  strength = 60;
+  background = false;
+  background-frame = false;
+  background-fixed = false;
+}
 
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
@@ -65,14 +70,14 @@ fade-exclude = [
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 0.8
-inactive-opacity = 0.8;
+inactive-opacity = 0.95;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
 frame-opacity = 0.7;
 
 # Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
-# menu-opacity = 1.0 
+# menu-opacity = 1.0
 # menu-opacity is depreciated use dropdown-menu and popup-menu instead.
 
 #If using these 2 below change their values in line 510 & 511 aswell
@@ -85,7 +90,17 @@ dropdown_menu = { opacity = 1; }
 inactive-opacity-override = true;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-active-opacity = 1;
+active-opacity = 0.93;
+
+active-opacity-exclude = [
+  "name = 'Notification'",
+  "class_g = 'Conky'",
+#  "class_g = 'Polybar'",
+  "class_g = 'vlc'",
+  "class_g = 'firefox'",
+"_GTK_FRAME_EXTENTS@:c"
+];
+
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 #inactive-dim = 0.1
 
@@ -110,6 +125,6 @@ wintypes:
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
   dock = { shadow = false; }
   dnd = { shadow = true; }
-  popup_menu = { opacity = 0.93; }
-  dropdown_menu = { opacity = 0.93; }
+  popup_menu = { opacity = 0.96; }
+  dropdown_menu = { opacity = 0.96; }
 };
