--- a/ArchLinux/.config/polybar/config
+++ b/ArchLinux/.config/polybar/config
@@ -1,13 +1,12 @@
 ;==========================================================
 ;
-;
-;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
-;   ██╔══██╗██╔═══██╗██║  ╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗
-;   ██████╔╝██║   ██║██║   ╚████╔╝ ██████╔╝███████║██████╔╝
-;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗
-;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
-;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
-;
+;     ██╗      █████╗ ██╗  ██╗███████╗██╗  ██╗███╗   ███╗██╗██╗  ██╗ █████╗ ███╗   ██╗████████╗ █████╗
+;     ██║     ██╔══██╗██║ ██╔╝██╔════╝██║  ██║████╗ ████║██║██║ ██╔╝██╔══██╗████╗  ██║╚══██╔══╝██╔══██╗
+;     ██║     ███████║█████╔╝ ███████╗███████║██╔████╔██║██║█████╔╝ ███████║██╔██╗ ██║   ██║   ███████║
+;     ██║     ██╔══██║██╔═██╗ ╚════██║██╔══██║██║╚██╔╝██║██║██╔═██╗ ██╔══██║██║╚██╗██║   ██║   ██╔══██║
+;     ███████╗██║  ██║██║  ██╗███████║██║  ██║██║ ╚═╝ ██║██║██║  ██╗██║  ██║██║ ╚████║   ██║   ██║  ██║
+;     ╚══════╝╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝╚═╝  ╚═╝╚═╝     ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝   ╚═╝   ╚═╝  ╚═╝
+
 ;
 ;   To learn more about how to configure Polybar
 ;   go to https://github.com/polybar/polybar
@@ -56,22 +55,40 @@ pseudo-transparency = false
 
 [colors]
 ;;Dracula Color scheme
-background = #282a36
-background-trans = #33f8f8f2
-background-alt = #44475a
-foreground = #f8f8f2
-foreground-alt = #ffffff
+;background = #282a36
+;background-trans = #33f8f8f2
+;background-alt = #44475a
+;foreground = #f8f8f2
+;foreground-alt = #ffffff
+;primary = #ffb52a
+;secondary = #ff5555
+;alert = #ff5555
+;red = #ff5555
+;green= #50fa7b
+;yellow = #f1fa8c
+;comment = #6272a4
+;cyan = #8be9fd
+;orange = #ffb86c
+;pink = #ff79c6
+;purple = #de93f9
+
+;;Royal Dark  Color Scheme
+background = #212128
+background-trans = #cc1a1a1e
+background-alt = #404040
+foreground = #eeeef4
+foreground-alt = #d0d0d0
 primary = #ffb52a
-secondary = #ff5555
-alert = #ff5555
-red = #ff5555
-green= #50fa7b
-yellow = #f1fa8c
-comment = #6272a4
-cyan = #8be9fd
-orange = #ffb86c
-pink = #ff79c6
-purple = #de93f9
+secondary = #f24054
+alert = #f24054
+red = #f24054
+green= #40f260
+yellow = #f2f260
+blue = #8060f2
+cyan = #00bcd4
+orange = #f28080
+pink = #f240f2
+purple = #8060f2
 
 ################################################################################
 ################################################################################
@@ -95,7 +112,7 @@ line-size = 0
 line-color = ${colors.red}
 
 border-size = 0
-border-color = #00000000
+border-color = #000000
 
 padding-left = 0
 padding-right = 0
@@ -104,17 +121,18 @@ module-margin-left = 0
 module-margin-right = 0
 
 ;https://github.com/jaagr/polybar/wiki/Fonts
-font-0 = Source Code Pro:pixelsize=12;1
-font-1 = Font Awesome 5 Free:pixelsize=12;2
-font-2 = Font Awesome 5 Free Solid:pixelsize=12;2
-font-3 = Font Awesome 5 Brands:pixelsize=12;2
+font-0 = Hack Regular:pixelsize=12;1
+font-1 = Font Awesome 6 Free:pixelsize=12;2
+font-2 = Font Awesome 6 Free Solid:pixelsize=12;2
+font-3 = Font Awesome 6 Brands:pixelsize=12;2
+
 ;===============================================================================
-; modules: [ i3, xwindow , space , wifi , network , speedtest* , arch-update , arch-aur-updates , cpu , memory
-;brightnessctl* , backlight , pulseaudio , pulseaudio-control , date , pavolume , powermenu , pornhub , kdeconnect ]
+; modules: [ i3, xwindow , space , wifi , network , speedtest* , arch-update , arch-aur-updates , deb-update, cpu , memory
+;brightnessctl* , battery ,  backlight , pulseaudio , pulseaudio-control , date , pavolume , powermenu , kdeconnect ]
 
 modules-left = i3 xwindow
 modules-center =
-modules-right = arch-aur-updates network pulseaudio brightnessctl wifi date powermenu
+modules-right =arch-aur-updates space network wifi pulseaudio battery brightnessctl uptime date powermenu
 ;===============================================================================
 separator =
 
@@ -147,6 +165,80 @@ double-click-right =
 ; - ns-resize : Up and down arrows, can be used to indicate scrolling
 cursor-click = pointer
 cursor-scroll = ns-resize
+
+
+################################################################################
+################################################################################
+############                  MAINBAR-BSPWM                         ############
+################################################################################
+################################################################################
+
+[bar/mainbar-bspwm]
+;monitor = ${env:MONITOR}
+;monitor-fallback = HDMI1
+width = 100%
+height = 24
+;offset-x = 1%
+;offset-y = 1%
+radius = 0
+fixed-center = false
+bottom = false
+separator =
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+line-size = 0
+line-color = ${colors.red}
+
+wm-restack = bspwm
+override-redirect = false
+
+; Enable support for inter-process messaging
+; See the Messaging wiki page for more details.
+enable-ipc = true
+
+border-size = 0
+border-color = #00000000
+
+padding-left = 0
+padding-right = 0
+
+module-margin-left = 0
+module-margin-right = 0
+
+;https://github.com/jaagr/polybar/wiki/Fonts
+font-0 = Hack Regular:pixelsize=12;1
+font-1 = Font Awesome 6 Free:pixelsize=12;2
+font-2 = Font Awesome 6 Free Solid:pixelsize=12;2
+font-3 = Font Awesome 6 Brands:pixelsize=12;2
+
+;===============================================================================
+; modules: [ i3, xwindow , space , wifi , network , speedtest* , arch-update , arch-aur-updates , deb-update, cpu , memory uptime
+;brightnessctl* , backlight , pulseaudio , pulseaudio-control , date , pavolume , powermenu , kdeconnect ]
+
+modules-left = bspwm xwindow
+modules-center =
+modules-right = arch-aur-updates space network wifi pulseaudio battery brightnessctl uptime date powermenu
+;===============================================================================
+
+################## Tray  ###########
+
+tray-detached = false
+tray-offset-x = 0
+tray-offset-y = 0
+tray-position = none
+tray-padding = 2
+tray-maxsize = 20
+tray-scale = 1.0
+tray-background = ${colors.yellow}
+tray-foreground = ${colors.background}
+
+scroll-up = bspwm-desknext
+scroll-down = bspwm-deskprev
+
+cursor-click = pointer
+cursor-scrome = ns-resize
 
 ################################################################################
 ################################################################################
@@ -201,18 +293,18 @@ fuzzy-match = true
 ; NOTE: The label needs to match the name of the i3 workspace
 ;extra icons to choose from
 ;http://fontawesome.io/cheatsheet/
-;            
+;             
 
 ws-icon-0 = 1;
-ws-icon-1 = 2;
+ws-icon-1 = 2;
 ws-icon-2 = 3;
 ws-icon-3 = 4;
 ws-icon-4 = 5;
-ws-icon-5 = 6;
-ws-icon-6 = 7;
+ws-icon-5 = 6;
+ws-icon-6 = 7;
 ws-icon-7 = 8;
-ws-icon-8 = 9;
-ws-icon-default = 
+ws-icon-8 = 9;
+ws-icon-default = 
 ; NOTE: You cannot skip icons, e.g. to get a ws-icon-6
 ; you must also define a ws-icon-5.
 ; NOTE: Icon will be available as the %icon% token inside label-*
@@ -239,7 +331,7 @@ label-mode-background = ${colors.background}
 ; Default: %icon% %name%
 ; focused = Active workspace on focused monitor
 label-focused = %icon%
-label-focused-background = ${colors.purple}
+label-focused-background = ${colors.cyan}
 label-focused-foreground = ${colors.background}
 label-focused-padding = 1
 
@@ -253,7 +345,7 @@ label-focused-padding = 1
 label-unfocused = %icon%
 label-unfocused-padding = 1
 label-unfocused-background = ${colors.background-alt}
-label-unfocused-foreground = ${colors.purple}
+label-unfocused-foreground = ${colors.foreground-alt}
 
 ; Available tokens:
 ;   %name%
@@ -279,8 +371,98 @@ label-urgent-background = ${colors.red}
 label-urgent-padding = 1
 
 ; Separator in between workspaces
-label-separator =|
+label-separator = | 
 ;===============================================================================
+
+
+################################################################################
+################################################################################
+############                       MODULE BSPWM                     ############
+################################################################################
+################################################################################
+
+[module/bspwm]
+type = internal/bspwm
+
+enable-click = true
+enable-scroll = true
+reverse-scroll = true
+pin-workspaces = true
+fuzzy-match = true
+
+;Workspace Icons
+; ws-icon-[0-9]+ = label;icon
+; NOTE: The label needs to match the name of the i3 workspace
+;extra icons to choose from
+;http://fontawesome.io/cheatsheet/
+;             
+
+ws-icon-0 = 1;
+ws-icon-1 = 2;
+ws-icon-2 = 3;
+ws-icon-3 = 4;
+ws-icon-4 = 5;
+ws-icon-5 = 6;
+ws-icon-6 = 7;
+ws-icon-7 = 8;
+ws-icon-8 = 9;
+ws-icon-default = 
+; NOTE: You cannot skip icons, e.g. to get a ws-icon-6
+; you must also define a ws-icon-5.
+; NOTE: Icon will be available as the %icon% token inside label-*
+
+; Available tags:
+;   <label-monitor>
+;   <label-state> - gets replaced with <label-(focused|urgent|occupied|empty)>
+;   <label-mode> - gets replaced with <label-(monocle|tiled|fullscreen|floating|locked|sticky|private)>
+; Default: <label-state>
+format = <label-state> <label-mode>
+
+label-focused = %icon%
+label-focused-background = ${colors.cyan}
+label-focused-padding = 1
+label-focused-foreground = ${colors.background}
+
+label-occupied = %icon%
+label-occupied-padding = 1
+label-occupied-background = ${colors.background-alt}
+label-occupied-foreground = ${colors.foreground}
+
+label-urgent = %icon%
+label-urgent-padding = 1
+label-urgent-background = ${colors.red}
+label-urgent-foreground = ${colors.background}
+
+label-empty = %icon%
+label-empty-foreground = ${colors.background-alt}
+label-empty-padding = 1
+label-empty-background = ${colors.background}
+
+label-monocle = "  "
+label-monocle-foreground = ${colors.foreground}
+label-tiled = "  "
+label-tiled-foreground = ${colors.foreground}
+label-fullscreen = "  "
+label-fullscreen-foreground = ${colors.foreground}
+label-floating = "  "
+label-floating-foreground = ${colors.foreground}
+label-pseudotiled = "  "
+label-pseudotiled-foreground = ${colors.foreground}
+label-locked = "  "
+label-locked-foreground = ${colors.foreground}
+label-sticky = "  "
+label-sticky-foreground = ${colors.foreground}
+label-private =  "     "
+label-private-foreground = ${colors.foreground}
+
+; Separator in between workspaces
+;label-separator = |
+;label-separator-padding = 2
+;label-separator-foreground = ${colors.yellow}
+
+format-foreground = ${colors.foreground}
+format-background = ${colors.background}
+;===========================================================================================
 
 [module/xwindow]
 ;https://github.com/jaagr/polybar/wiki/Module:-xwindow
@@ -294,7 +476,7 @@ label-maxlen = 45
 
 format-prefix = "  "
 ;format-prefix-underline = ${colors.red}
-format-foreground = ${colors.purple}
+format-foreground = ${colors.cyan}
 ;format-background = ${colors.background-trans}
 
 ################################################################################
@@ -303,10 +485,9 @@ format-foreground = ${colors.purple}
 ################################################################################
 ################################################################################
 [module/space]
-; grey to Blue
 type = custom/text
-content = "  "
-content-foreground = ${colors.foreground}
+content = " | "
+content-foreground = ${colors.red}
 content-background = ${colors.background-trans}
 
 
@@ -423,6 +604,14 @@ format-prefix = ""
 format-prefix-padding = 1
 ;===============================================================================
 
+[module/deb-update]
+type = custom/script
+exec = (sleep 90s && python ~/.config/polybar/scripts/deb-update.py)
+interval = 7200
+format-prefix = " "
+tail = true
+;===============================================================================
+
 [module/cpu]
 type = internal/cpu
 interval = 1
@@ -455,6 +644,115 @@ label-foreground = ${colors.foreground}
 label-padding = 1
 label-underline = ${colors.purple}
 ;===============================================================================
+
+[module/uptime]
+type = custom/script
+exec = uptime --pretty | sed 's/up //' | sed 's/\ years\?,/y/' | sed 's/\ weeks\?,/w/' | sed 's/\ days\?,/d/' | sed 's/\ hours\?,\?/h/' | sed 's/\ minutes\?/m/'
+interval = 1
+
+;HOW TO SET IT MINIMAL 10 CHARACTERS - HIDDEN BEHIND SYSTEM ICONS
+;label = %output%
+label = %output%
+label-padding = 1
+format-foreground = ${colors.foreground}
+format-background = ${colors.background-alt}
+
+format-prefix = ""
+format-prefix-foreground = ${colors.background}
+format-prefix-background = ${colors.red}
+format-prefix-padding = 1
+;=================================================================================
+
+[module/battery]
+type = internal/battery
+battery = BAT0
+adapter = ADP1
+; Disable polling by setting the interval to 0.
+;
+; Default: 5
+poll-interval = 1
+
+; see "man date" for details on how to format the time string
+; NOTE: if you want to use syntax tags here you need to use %%{...}
+; Default: %H:%M:%S
+time-format = %H:%M
+
+; Available tags:
+;   <label-charging> (default)
+;   <bar-capacity>
+;   <ramp-capacity>
+;   <animation-charging>
+format-charging = <animation-charging> <label-charging>
+format-charging-background = ${colors.cyan}
+format-charging-foreground = ${colors.background}
+format-charging-padding = 1
+
+; Available tags:
+;   <label-discharging> (default)
+;   <bar-capacity>
+;   <ramp-capacity>
+;   <animation-discharging>
+format-discharging = <ramp-capacity> <label-discharging>
+format-discharging-background = ${colors.red}
+format-discharging-foreground = ${colors.background}
+format-discharging-padding = 1
+
+; Available tags:
+;   <label-full> (default)
+;   <bar-capacity>
+;   <ramp-capacity>
+format-full = <ramp-capacity> <label-full>
+format-full-background = ${colors.cyan}
+format-full-foreground = ${colors.background}
+format-full-padding = 1
+
+; Available tokens:
+;   %percentage% (default) - is set to 100 if full-at is reached
+;   %percentage_raw%
+;   %time%
+;   %consumption% (shows current charge rate in watts)
+label-charging = %percentage%%
+
+; Available tokens:
+;   %percentage% (default) - is set to 100 if full-at is reached
+;   %percentage_raw%
+;   %time%
+;   %consumption% (shows current discharge rate in watts)
+label-discharging = %percentage%%
+
+; Available tokens:
+;   %percentage% (default) - is set to 100 if full-at is reached
+;   %percentage_raw%
+label-full = 100%
+
+; Only applies if <ramp-capacity> is used
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+
+; Only applies if <bar-capacity> is used
+bar-capacity-width = 10
+
+; Only applies if <animation-charging> is used
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+; Framerate in milliseconds
+animation-charging-framerate = 750
+
+
+; Only applies if <animation-discharging> is used
+animation-discharging-0 = 
+animation-discharging-1 = 
+animation-discharging-2 = 
+animation-discharging-3 = 
+animation-discharging-4 = 
+; Framerate in milliseconds
+;=================================================================================
 
 [module/brightnessctl]
 ;Dependencies "brightnessctl"
@@ -621,27 +919,6 @@ label-background = ${colors.red}
 label-foreground = ${colors.background}
 label-padding = 1
 click-left = exec ~/.config/polybar/scripts/powermenu
-;===============================================================================
-
-[module/pornhub]
-type = custom/script
-exec = echo " hub "
-interval = 3600
-click-left = "firefox --private-window https://pornhub.com/random" &
-
-format = <label>
-format-prefix = "  Porn "
-format-prefix-foreground = #ffffff
-format-prefix-background = #000000
-
-format-overline = #000000
-format-underline = #000000
-format-foreground = #000000
-format-background = #ffa500
-
-format-suffix = " "
-format-suffix-background = #000000
-format-suffix-foreground = #000000
 ;===============================================================================
 
 [module/kdeconnect]
