--- a/ArchLinux/.config/starship.toml
+++ b/ArchLinux/.config/starship.toml
@@ -23,10 +23,30 @@ error_symbol = "[  ->](bold #f24054)"      # used if previous command failed
 style = "bold #f2f260"
 
 [git_branch]
+format = " [$symbol$branch]($style) "
+symbol = "🍣 "
 style = "bold #f240f2"
 
+[git_commit]
+commit_hash_length = 8
+style = "bold #F2F280"
+
+[git_state]
+format = '[\($state( $progress_current of $progress_total)\)]($style) '
+
 [git_status]
+conflicted = "⚔️ "
+ahead = "🏎️ 💨 ×${count}"
+behind = "🐢 ×${count}"
+diverged = "🔱 🏎️ 💨 ×${ahead_count} 🐢 ×${behind_count}"
+untracked = "🛤️  ×${count}"
+stashed = "📦 "
+modified = "📝 ×${count}"
+staged = "🗃️  ×${count}"
+renamed = "📛 ×${count}"
+deleted = "🗑️  ×${count}"
 style = "bold #f24054"
+format = "$all_status$ahead_behind"
 #===============================================================
 
 # Use custom format
